# learn

./: .gitignore  .gitmodules  LICENSE  README.md
21st_century_c/: erf  erf.c
cloud/aws/: hello.txt
cloud/pulumi/quickstart/: .gitignore  Pulumi.yaml  __main__.py
hackerrank/: README.md
hackerrank/functional_programming/introduction/: filter_array.lisp  hello-n-times.lisp  hello_world.lisp  list_replication.lisp  solve-me-first.lisp
learn-the-hard-way/: README.md
learn-the-hard-way/c/: CMakeLists.txt  Makefile  ex1.c  ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex15.c  ex16.c  ex3.c  ex6.c  ex7.c  ex8.c  ex9.c
practical-common-lisp/: README.md  cddb.db  database.lisp  hello.lisp  pcl.lisp
reversing/: Makefile  hello.c  hello.s
rust/gentle_introduction/: add1.rs  add2.rs  add3.rs  args0.rs  args1.rs  array1.rs  array2.rs  array3.rs  by_ref.rs  cos.rs  file1.rs  file2.rs  for1.rs  for2.rs  for3.rs  fun1.rs  fun4.rs  hello.rs  iter1.rs  iter2.rs  iter3.rs  let1.rs  let2.rs  match_range.rs  match_switch.rs  move1.rs  recurse.rs  slice1.rs  slice2.rs  slice4.rs  str1.rs  string1.rs  string3.rs  string3_match.rs  string5.rs  string6.rs  sum1.rs  vec1.rs  vec2.rs  vec3.rs  (+1 more)
rust/rust-101/src/: part09.rs  part10.rs  part13.rs
