cmake_minimum_required(VERSION 2.8.4)
project(LearnCTheHardWay)
set(CMAKE_C_FLAGS "-Wall -g")

add_executable(ex1 ex1.c)
add_executable(ex3 ex3.c)
add_executable(ex6 ex6.c)
add_executable(ex7 ex7.c)
add_executable(ex8 ex8.c)
add_executable(ex9 ex9.c)
add_executable(ex10 ex10.c)
add_executable(ex11 ex11.c)
add_executable(ex12 ex12.c)
add_executable(ex13 ex13.c)
add_executable(ex14 ex14.c)
add_executable(ex15 ex15.c)
